--- a/views/phonevalidation.ejs
+++ b/views/phonevalidation.ejs
@@ -32,9 +32,7 @@
                 console.log(JSON.parse(xmlhttp.response));
                 if (xmlhttp.status == 200) {
                     //window.location = "/admin" + "/index";
-
-                }
-                else {
+                } else {
                     //document.getElementById("status").style.display = "block";
                     //document.getElementById("status").innerHTML = "<strong>error</strong> " + xmlhttp.status;
                 }
