--- a/views/paymentparams.ejs
+++ b/views/paymentparams.ejs
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
+
+    <style>
+        /*
+        .has-error > label {
+            padding-right: 30px;
+            padding-left: 0 !important;
+        }
+
+        .has-error {
+            padding-right: 0 !important;
+            padding-left: 0 !important;
+        }
+
+        .has-error > .col-sm-9 {
+            padding-right: 0 !important;
+            padding-left: 0 !important;
+        }
+        */
+
+        .has-error {
+            margin-right: -15px;
+            margin-left: -15px;
+            margin-bottom: 15px;
+            padding: 0;
+            /*padding-left: 0px;
+            padding-right: 0px;*/
+        }
+
+    </style>
+
 </head>
 
 <body>
@@ -12,37 +42,32 @@
         <div>
             <legend>Payment</legend>
         </div>
-        <!-- panel preview -->
-
-        <!--
-        <input type="text" name="server_callback_url" value="https://site.com/callback/">
-        <input type="text" name="response_url" value="https://site.com/responsepage/"> <!-- when payment success -->
-
-        <!--
-        <input type="text" name="order_id" value="test4207135583456">
-        <input type="text" name="order_desc" value="Test payment">
-        <input type="text" name="currency" value="RUB">
-        <input type="text" name="amount" value="10">
-        <input type="text" name="signature" value="5a089256b033e5b543242d1711d157d90ae80fcb">
-        <input type="text" name="merchant_id" value="1396424">
-        -->
-
 
         <div>
             <form>
                 <h4>Add payment:</h4>
                 <div class="panel panel-default">
                     <div class="panel-body form-horizontal payment-form">
+                        <div class="form-group" id="phone_form">
+                            <label for="phone_number" class="col-sm-3 control-label">Phone number</label>
+                            <div class="col-sm-9">
+                                <input type="text" onchange="validate()" class="form-control" id="phone_number"
+                                       name="phone_number" placeholder="phone_number">
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label for="order_id" class="col-sm-3 control-label">order_id</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="order_id" name="order_id" value="test4207135583456">
+                                <input type="text" class="form-control" id="order_id" name="order_id"
+                                       value="test4207135583456">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="order_desc" class="col-sm-3 control-label">order_desc</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="order_desc" name="order_desc" value="Test payment">
+                                <input type="text" class="form-control" id="order_desc" name="order_desc"
+                                       value="Test payment">
                             </div>
                         </div>
                         <div class="form-group">
@@ -60,33 +85,61 @@
                                 </select>
                             </div>
                         </div>
-                        <!--
-                        <div class="form-group">
-                            <label for="signature" class="col-sm-3 control-label">signature</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id="signature" name="signature">
-                            </div>
-                        </div>
-                        -->
 
                         <div class="form-group">
-                            <label for="merchant_id" class="col-sm-3 control-label">merchant_id (use 1396424 for test)</label>
+                            <label for="merchant_id" class="col-sm-3 control-label">merchant_id (use 1396424 for
+                                test)</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="merchant_id" name="merchant_id" value="1396424">
+                                <input type="text" class="form-control" id="merchant_id" name="merchant_id"
+                                       value="1396424">
                             </div>
                         </div>
 
                     </div>
                 </div>
             </form>
-            <button style="float:right;" type="button" class="btn btn-default" onclick="request2()"> Next</button>
+            <button style="float:right;" type="button" class="btn btn-default" onclick="request()"> Next</button>
         </div> <!-- / panel preview -->
     </div>
 
 
     <script>
+        function validate() {
+            var phone_number = document.getElementById("phone_number");
+            var phone_form = document.getElementById("phone_form");
 
-        function request2() {
+            var data = {
+                phone_number: phone_number.value
+            };
+
+            var xmlhttp = new XMLHttpRequest();
+            var url = "/validatePhone";
+            xmlhttp.open('post', url, true);
+            xmlhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            xmlhttp.onreadystatechange = function () {
+                if (xmlhttp.readyState == XMLHttpRequest.DONE) {
+                    if (xmlhttp.status == 200) {
+
+                        if (xmlhttp.response == "error") {
+                            console.log("error");
+                            phone_form.className = "panel-body form-horizontal has-error payment-form"
+                        } else if (xmlhttp.response == "success") {
+                            console.log("success");
+                        }
+
+                    } else {
+                        console.log(xmlhttp.status);
+                    }
+                }
+            };
+
+            xmlhttp.send(JSON.stringify(data));
+        }
+    </script>
+
+
+    <script>
+        function request() {
             var orderId = document.getElementById("order_id");
             var orderDesc = document.getElementById("order_desc");
             var currency = document.getElementById("currency");
@@ -94,7 +147,6 @@
             //var signature = document.getElementById("signature");
             //var productID = document.getElementById("product_id");
             var merchantID = document.getElementById("merchant_id");
-
 
             var data = {
                 //"request": {
