--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
+    <!--<script src="https://api.fondy.eu/static_common/v1/checkout/ipsp.js"></script>-->
+    <script src="/javascripts/ipsp.js"></script>
+
 
     <style>
         input, textarea, select {
@@ -132,11 +135,121 @@
         </div>
         -->
 
-        <button type="button" onclick="proceed()" class="btn btn-default">Proceed</button>
 
+
+
+        <button type="button" onclick="iframeProceed()" class="btn btn-default">FROM IFRAME</button>
+
+        <button type="button" onclick="$ipsp('checkout').loadUrl('https://api.fondy.eu/api/checkout?token=c298b5074bac6707cbb2d58ab1716b5615e44de3')" class="btn btn-default">12345</button>
+
+        <button class="btn btn-default" id="checkout_button" onclick="$ipsp('checkout').send('submit')">Pay</button>
+
+        <button type="button" onclick="checkoutInit('url')" class="btn btn-default">Proceed VIA API</button>
+
+        <button type="button" onclick="proceed()" class="btn btn-default">Proceed</button>
     </div>
 </div>
 
+
+<script>
+    var checkoutStyles = {
+        'html , body' : {
+            'overflow' : 'hidden'
+        },
+        '.input_suggest .arrow' : {
+            'display' : 'none'
+        },
+        '[name="card_number"]' : {
+            'width' : '320px !important'
+        },
+        '.pages-checkout .page-section-shopinfo' : {
+            'background' : 'transparent'
+        },
+        '.col.col-shoplogo' : {
+            'display' : 'none'
+        },
+        '.col.col-language' : {
+            'display' : 'none'
+        },
+        '.pages-checkout' : {
+            'background' : 'transparent'
+        },
+        '.col.col-login' : {
+            'display' : 'none'
+        },
+        '.pages-checkout .page-section-overview' : {
+            'background' : '#fff',
+            'color' : '#252525',
+            'border-bottom' : '1px solid #dfdfdf'
+        },
+        '.col.col-value.order-content' : {
+            'color' : '#252525'
+        },
+        '.page-section-footer' : {
+            'display' : 'none'
+        },
+        '.page-section-tabs' : {
+            'display' : 'none'
+        },
+        '.btn-row' : {
+            'margin' : '20px'
+        },
+        '#submit_button_row' : {
+            'display': 'none'
+        },
+        '.btn-block' : {
+            'font-size' : '18px',
+            'line-height' : '50px',
+        }
+    };
+
+    function checkoutInit(url){
+        $ipsp('checkout').scope(function(){
+            this.setCheckoutWrapper('#checkout_wrapper');
+            this.addCallback(__DEFAULTCALLBACK__);
+            this.setModal(false);
+            this.setCssStyle(checkoutStyles);
+            this.action('show', function(data) {
+                $('#checkout_loader').remove();
+                $('#checkout').show();
+            });
+            this.action('hide', function(data) {
+                $('#checkout').hide();
+            });
+            this.action('resize', function(data) {
+                $('#checkout_wrapper').height(data.height);
+            });
+            this.loadUrl('https://api.fondy.eu/api/checkout?token=80aa1202ad0afd18046d36dfd46a012ad3ccb555');
+        });
+    };
+
+    var button = $ipsp.get('button');
+    button.setMerchantId(1396424);
+    button.setAmount(2999.99,'USD',true);
+    //button.setResponseUrl('http://shop.com/response/');
+    //button.setHost('api.fondy.eu');
+    button.addField({
+        label:'Product Description',
+        name:'descr',
+        value:'Apple MacBook Pro Retina Display',
+        readonly:true
+    });
+    button.addField({
+        label:'Full Name',
+        name:'username',
+        value:'',
+        required:true,
+        placeholder:'Enter Your Name',
+        valid:{
+            'pattern':'^[a-zA-Z\s]+$'
+        }
+    });
+    button.addParam('order_id','shop_order_'+Math.round(Math.random()*1000000));
+    //setTimeout(function(){
+    $('#checkout_loader').append(button.getButton('Open checkout in new window','','_blank'));
+    //},1600);
+    checkoutInit(button.getUrl());
+</script>
 
 <script>
     function proceed() {
