--- a/views/iframe.ejs
+++ b/views/iframe.ejs
@@ -27,6 +27,7 @@
                     src="/javascripts/jsf.js"
                     data-background-color="green"
                     data-color="black"
+                    data-body-border="2px solid red"
                     data-width="480"
                     data-height="480"
                     data-body-border-radius="10">
@@ -54,7 +55,6 @@
                     data-width="768"
                     data-height="1024"
                     data-body-border-radius="5">
-
             </script>
         </div>
     </div>
