--- a/views/iframe.ejs
+++ b/views/iframe.ejs
@@ -9,15 +9,15 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="width: 420px; height: 320px">
             <script
-                    src="/javascripts/jsf.js"
-                    data-background-color="#F2F2F2"
-                    data-body-border="1px solid black"
+                    src="http://localhost:3000/javascripts/jsf.js"
+                    data-background-color="#FFFFFF"
+                    data-body-border="1px solid #C0C0C0"
                     data-color="white"
-                    data-width="640"
-                    data-height="480"
-                    data-body-border-radius="0">
+                    data-body-border-radius="0"
+                    data-bottom-background="#22225E"
+                    data-button-background="#B543A0">
 
             </script>
         </div>
@@ -35,6 +35,7 @@
             </script>
         </div>
 
+        <!--
         <div class="col-md-4">
             <script
                     src="/javascripts/jsf.js"
@@ -57,6 +58,7 @@
                     data-body-border-radius="5">
             </script>
         </div>
+        -->
     </div>
 </div>
 
