--- a/views/iframe.ejs
+++ b/views/iframe.ejs
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css'/>
+
+    <!--<script src="/socket.io/socket.io.js"></script>-->
+
+
+    <script>
+//        var socket = io.connect("http://localhost:3000/");
+//
+//        socket.on('connect', function() {
+//            var sessionid = socket.io.engine.id;
+//            console.log(sessionid);
+//        });
+
+
+
+//        io.on('connection', function(socket){
+//            socket.join('some room');
+//        });
+//
+//
+//        var sid = socket.sessionid;
+//        console.log(sid);
+
+//        socket.on('some event', function(msg){
+//            console.log("private : " + msg);
+//        });
+//
+//        socket.on('chat message', function(msg){
+//            console.log(msg);
+//        });
+    </script>
+
 </head>
 <body>
 
@@ -11,7 +42,7 @@
     <div class="row">
         <div class="col-md-4" style="width: 420px; height: 320px">
             <script
-                    src="http://localhost:3000/javascripts/jsf.js"
+                    src="http://localhost:3000/javascripts/jsf2.js"
                     data-background-color="#FFFFFF"
                     data-body-border="1px solid #C0C0C0"
                     data-color="white"
@@ -23,16 +54,21 @@
         </div>
 
         <div class="col-md-4">
-            <script
-                    src="/javascripts/jsf.js"
-                    data-background-color="green"
-                    data-color="black"
-                    data-body-border="2px solid red"
-                    data-width="480"
-                    data-height="480"
-                    data-body-border-radius="10">
 
+            <script
+                    src="http://localhost:3000/javascripts/jsfNF.js">
             </script>
+
+            <!--<script-->
+                    <!--src="/javascripts/jsf.js"-->
+                    <!--data-background-color="green"-->
+                    <!--data-color="black"-->
+                    <!--data-body-border="2px solid red"-->
+                    <!--data-width="480"-->
+                    <!--data-height="480"-->
+                    <!--data-body-border-radius="10">-->
+
+            <!--</script>-->
         </div>
 
         <!--
